fix the uneven height of the new items

--- a/scss/modules/_news.scss
+++ b/scss/modules/_news.scss
@@ -50,6 +50,7 @@ $cardColors: (
 
 .news-item p{
     color: $body-color;
+    min-height: 70px;
 }
 
 
